<?xml version="1.0"?>
<package format="2">
  <name>quickhull</name>
  <version>0.0.1</version>
  <description>Quickhull algorithm.</description>
  <maintainer email="f.bloechliger@gmail.ch">fabianbl</maintainer>
  <license>none</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
